--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <p>QA engineer</p>
     <audio id="background-music" loop>
         <source src="path/to/your/quiet-music.mp3" type="audio/mpeg">
         Ваш браузер не поддерживает аудиофайлы.
